# misc

./: .env.example  .rspec_status  CLAUDE.md
annicter/: .gitignore  .rspec_status  CLAUDE.md  Gemfile  README.md
annicter/lib/annicter/: client.rb  version.rb  work.rb
annicter/spec/: bin_annicter_spec.rb
annicter/spec/annicter/: client_spec.rb  work_spec.rb
baguette/: import_photos.rb
claude_settings_merge/: CLAUDE.md  Cargo.toml  merge_claude_settings.rb
claude_settings_merge/src/: main.rs
gcal/: .gitignore  README.md  README_SETUP.md  pyproject.toml  requirements.txt
geo_distance/: .gitignore  Gemfile  geo_distance.rb
lambda_test/: README.md
lambda_test/cdk-lambda/: cdk.json  package-lock.json  package.json  template.yaml
lambda_test/hello-cdk/: package-lock.json
lambda_test/hello-cdk/lambda/: index.ts  package-lock.json  (+1 more)
lib/: annicter.rb
lib/annicter/: season.rb
puyo_analyzer/: .dockerignore  Dockerfile  detected_json_to_tsv.rb  docker-compose.yml  field.psd  generate_images.rb  jupyterlab.sh  memo.md  run.sh
puyo_analyzer/home/: cv.ipynb  extract_diff.py
puyo_analyzer/img/: bg2.psd  puyo_sozai.psd
scratch/playwright_mcp/: calculator.js  index.html
scratch/xcodebuild_mcp/: CLAUDE.md
site_checker/: site_checker.rb
spec/: spec_helper.rb
spec/annicter/: season_spec.rb
speedcubing/: oll_assistant.rb
speedcubing/data/: oll_states.csv  oll_transitions.csv
tweet_of_the_year/: crawl.rb  extract.rb  test_curl_command.rb  test_tweet.rb
tweet_of_the_year/lib/: likes_response.rb  tweet.rb
video_encoder/: video_encoder.rb
(+17 files in other folders)
