[project]
name = "gcal-free"
version = "0.1.0"
description = "Google Calendar free time finder"
dependencies = [
    "google-auth==2.32.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.137.0",
    "python-dateutil==2.9.0",
]

[tool.uv]
dev-dependencies = []